Expand CI pipeline with linting and security checks

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,5 +8,9 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.12'
+      - run: sudo apt-get update && sudo apt-get install -y libgl1
       - run: pip install -r requirements.txt
-      - run: pytest -q
+      - run: pip install pre-commit coverage bandit
+      - run: pre-commit run --all-files --show-diff-on-failure
+      - run: pytest --cov=. -q
+      - run: bandit -r .
