--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "PySide6>=6.9",
     "Pillow>=11.0",
     "ffmpeg-python>=0.2",
+    "requests>=2.31",
 ]
 
 [project.optional-dependencies]
