--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "kalendertool"
-version = "0.1.0"
+version = "0.1.1"
 description = "Werkzeug, das Bilder und Tonspuren zu Videos verbindet"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -9,6 +9,7 @@ dependencies = [
     "PySide6>=6.9",
     "Pillow>=11.0",
     "ffmpeg-python>=0.2",
+    "requests>=2.31",
 ]
 
 [project.optional-dependencies]
